--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@types/axios": "^0.14.4",
     "@types/stylis": "^4.2.7",
+    "axios": "^1.9.0",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "stylis-plugin-rtl": "^2.1.1"
   },
   "devDependencies": {
