به‌روزرسانی فایل‌های پیکربندی و بهبود تست‌های API: اضافه کردن فایل‌های تست جدید و به‌روزرسانی .gitignore برای نادیده گرفتن مستندات API و فایل‌های تست. همچنین، به‌روزرسانی package.json و package-lock.json برای اضافه کردن وابستگی جدید zustand و بهبود مدیریت وضعیت. اصلاحات جزئی در کامپوننت‌های Auth و بهبود عملکرد با استفاده از Zustand به جای Context API.

--- a/.gitignore
+++ b/.gitignore
@@ -13,14 +13,15 @@
 
 # testing
 /coverage
-   
+backend_api_documentation.md
 # next.js
 /.next/
 /out/
 /mahrakar.zip 
 # production
 /build
-
+/test_api.py
+/test_user_type.py
 # misc
 .DS_Store
 *.pem
