--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/stylis": "^4.2.7",
     "axios": "^1.9.0",
+    "date-fns-jalali": "^4.1.0-0",
     "js-cookie": "^3.0.5",
     "next": "15.3.0",
     "react": "^19.0.0",
