به‌روزرسانی فایل‌های .gitignore و README.md: اضافه کردن فایل‌های تست جدید و مستندات مربوط به سیستم احراز هویت. همچنین، به‌روزرسانی کامپوننت‌های LoginForm و RegisterForm با تغییرات در ورودی شماره تلفن و بهبود استایل. حذف کامپوننت‌های غیرضروری و بهبود ساختار کد.

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,11 @@ backend_api_documentation.md
 .DS_Store
 *.pem
 
+/test_user_type.py
+/test_api.py
+/test_api_final.py
+/test_api_fixed.py
+/گزارش کامل پنل کارفرما.md
 # debug
 npm-debug.log*
 yarn-debug.log*
