به‌روزرسانی فایل‌های .gitignore و package.json: اضافه کردن فایل‌های تست جدید و وابستگی‌های جدید شامل @mui/x-date-pickers و cookies-next. همچنین، بهبود مدیریت درخواست‌های API در test_api.py با اضافه کردن نقاط پایانی جایگزین و بهبود منطق در UserMenu برای نمایش منوی کاربر بر اساس نوع کاربر. اصلاحات جزئی در کامپوننت‌های RegisterForm و Header برای بهبود تجربه کاربری.

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
-
+.gitignore
 # testing
 /coverage
 backend_api_documentation.md
@@ -25,7 +25,8 @@ backend_api_documentation.md
 # misc
 .DS_Store
 *.pem
-
+/test_api.py
+Employerpanel.md
 /test_user_type.py
 /test_api.py
 /test_api_final.py
