--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@hookform/resolvers": "^5.0.1",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@mui/x-date-pickers": "^8.4.0",
     "@types/axios": "^0.14.4",
     "@types/js-cookie": "^3.0.6",
     "@types/stylis": "^4.2.7",
     "axios": "^1.9.0",
+    "cookies-next": "^5.1.0",
     "date-fns-jalali": "^4.1.0-0",
     "js-cookie": "^3.0.5",
     "next": "15.3.0",
